更新为v3版本新接口
